# JB_mech

./: .gitignore  commands.md  crescendo.md  download_full_llama.py  download_model.py  ideas.md  model_distilation_links.md  pyproject.toml  requirements-mac.txt  safety_probing.ipynb  what_to_build_next.md
Ideas/: Attention_distilation.md  SRPO.md  What_to_build.md  combine.md  gcg.md  glp_activation_inversion_research.md  model_fine_tune.md  multi_turn_rl_jailbreak_plan.md  multi_turn_rl_jailbreak_plan_condensed.md  plan.md  rcode.md  refusal_direction_reward.md  reward_model_brainstorm.md  sft_on_full_traject_attack.md  single_example_spro_plan.md  star_reproduction_plan.md
docs/: architecture_geometry_guided_redteaming.md  option_a_single_activation_loop.md  option_c_delta_prompting.md  option_d_refusal_direction_integration.md
notebooks/: 01_generate_jailbreaks.ipynb  02_jailbreak_direction_interpretation.ipynb  03_extract_response_activations.ipynb  05_find_refusal_direction.ipynb  ao_interpret_demo.ipynb  attention_convergence_test.ipynb  compute_assistant_axis.ipynb  debug_think_tags.ipynb  delta_prompting_attack.ipynb  delta_prompting_attack_v2.ipynb  delta_prompting_attack_v3.ipynb  delta_prompting_attack_v4.ipynb  delta_prompting_attack_v5.ipynb  jailbreak_analysis.ipynb  merge_cold_start_lora.ipynb  mt_rl_01.2_cold_start_sft_multi_turn_stable .ipynb  mt_rl_01_cold_start_sft.ipynb  mt_rl_02_warmup_grpo copy.ipynb  mt_rl_02_warmup_grpo.ipynb  mt_rl_02_warmup_grpo_runpod.ipynb  mt_rl_03_single_example_spro.ipynb  mt_rl_04_spro_clean.ipynb  test_attention.ipynb  (+4 more)
(+171 files in other folders)
